--- a/templates/base.html
+++ b/templates/base.html
@@ -10,60 +10,9 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="{% static 'fontawesome/css/all.min.css' %}" />
-    <script src="{% static 'js/qrcode.min.js' %}"></script>
-
-    <style>
-        .bd-placeholder-img {
-          font-size: 1.125rem;
-          text-anchor: middle;
-          -webkit-user-select: none;
-          -moz-user-select: none;
-          user-select: none;
-        }
-  
-        @media (min-width: 768px) {
-          .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-          }
-        }
-  
-        .b-example-divider {
-          height: 3rem;
-          background-color: rgba(0, 0, 0, .1);
-          border: solid rgba(0, 0, 0, .15);
-          border-width: 1px 0;
-          box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-        }
-  
-        .b-example-vr {
-          flex-shrink: 0;
-          width: 1.5rem;
-          height: 100vh;
-        }
-  
-        .bi {
-          vertical-align: -.125em;
-          fill: currentColor;
-        }
-  
-        .nav-scroller {
-          position: relative;
-          z-index: 2;
-          height: 2.75rem;
-          overflow-y: hidden;
-        }
-  
-        .nav-scroller .nav {
-          display: flex;
-          flex-wrap: nowrap;
-          padding-bottom: 1rem;
-          margin-top: -1px;
-          overflow-x: auto;
-          text-align: center;
-          white-space: nowrap;
-          -webkit-overflow-scrolling: touch;
-        }
-      </style>
+    <link rel="stylesheet" href="{% static 'css/select2.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/select2-bootstrap-5-theme.min.css' %}" /> 
+    <script src="{% static 'js/qrcode.min.js' %}"></script>    
 </head>
 <body class="d-flex flex-column h-100">
 
@@ -86,16 +35,113 @@
               </ul>              
             </div>
             <div class="d-flex align-items-center">
-              <div class="d-flex">
-                <a href="" class="link-light me-5"><i class="fa-solid fa-plus"></i></a>
-                <a href="" class="link-light"><i class="fa-solid fa-user"></i></a>
+              <div class="d-flex">                
+                {% if user.is_authenticated %}
+                  <a href="" class="link-light me-5" data-bs-toggle="modal" data-bs-target="#addLink"><i class="fa-solid fa-plus"></i></a>
+                  <a href="{% url 'public:logout' %}" class="link-light"><i class="fa-solid fa-sign-out-alt"></i></a>
+                {% else %}
+                  <a href="" class="link-light" data-bs-toggle="modal" data-bs-target="#login"><i class="fa-solid fa-user"></i></a>
+                {% endif %}                
               </div>
-            </div>
+            </div>            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
           </div>
         </nav>
+        <div class="modal fade" id="login" tabindex="-1" role="dialog" 
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content rounded">
+                    <div class="modal-body p-0">
+                        <div class="card p-4">
+                            <button type="button" class="btn-close ms-auto" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                            <div class="card-header border-0 bg-white text-center pb-0">
+                                <h2 class="h4">Inicie sesión con su nombre de usuario y contraseña</h2>                                
+                            </div>
+                            <div class="card-body p-0 p-md-4">
+                                <form id="form-login" class="mt-4">{% csrf_token %}
+                                    <div class="form-group mb-4">                                        
+                                        <div class="input-group">
+                                            <span class="input-group-text" id="basic-addon1">
+                                                <span class="fas fa-user"></span>
+                                            </span>
+                                            <input type="text" class="form-control" placeholder="username"
+                                                id="username" name="username">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="form-group mb-4">                                            
+                                            <div class="input-group">
+                                                <span class="input-group-text" id="basic-addon2">
+                                                    <span class="fas fa-unlock-alt"></span>
+                                                </span>
+                                                <input type="password" placeholder="Password" class="form-control"
+                                                    id="password" name="password">
+                                            </div>
+                                        </div>
+                                        <div class="d-flex justify-content-between align-items-center mb-4">
+                                            <div>
+                                                <a href="{% url 'public:index' %}"
+                                                    class="small text-right">¿Has olvidado tu contraseña?</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-grid">
+                                        <button type="submit" class="btn btn-primary" id="btnLogin"><i class="fa-solid fa-right-to-bracket"></i> Entrar</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="addLink" tabindex="-1" role="dialog" 
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content rounded">
+                    <div class="modal-body p-0">
+                        <div class="card p-4">
+                            <button type="button" class="btn-close ms-auto" data-bs-dismiss="modal"
+                                aria-label="Close"></button>
+                            <div class="card-header border-0 bg-white text-center pb-0">
+                                <h2 class="h4">Agregar nuevo link</h2>                                
+                            </div>
+                            <div class="card-body text-center p-0 p-md-4">
+                                <form id="addLinkForm" class="mt-4" action="{% url 'public:add_link' %}" method="POST">{% csrf_token %}
+                                    <div class="form-group mb-4">                                        
+                                      <label class="mb-1" for="model">{{ addlinkform.name.label }}</label>
+                                      {{ addlinkform.name }}
+                                    </div>
+                                    <div class="form-group mb-4">
+                                      <label class="mb-1" for="model">{{ addlinkform.url.label }}</label>
+                                      {{ addlinkform.url }}                                                                              
+                                    </div>
+                                    <div class="form-group mb-4">
+                                      <label class="mb-1" for="model">{{ addlinkform.description.label }}</label>
+                                      {{ addlinkform.description }}                                                                              
+                                    </div>
+                                    <div class="form-group mb-4">
+                                      <label class="mb-1" for="model">{{ addlinkform.category.label }}</label>
+                                      {{ addlinkform.category }}                                                                              
+                                    </div>
+                                    <div class="form-check mb-4">							
+                                      {{ addlinkform.is_private }}
+                                      <label class="form-check-label" for="id_is_private">{{ addlinkform.is_private.label }}</label>
+                                    </div>
+                                    <div>
+                                        <button id="btnFetch" type="submit" class="btn btn-primary" disabled><i class="fa-solid fa-check"></i> Guardar</button>
+                                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal"><i class="fa-solid fa-xmark"></i> Cancelar</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- Begin page content -->
@@ -123,6 +169,93 @@
     
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/jquery-3.6.2.min.js' %}"></script>
+    <script src="{% static 'js/sweetalert2.all.min.js' %}"></script>
+    <script src="{% static 'js/bootstrapValidator.min.js' %}"></script>
+    <script src="{% static 'js/select2.full.min.js' %}"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
+    <script>
+      $(document).ready(function () {        
+        $('#addLinkForm').bootstrapValidator({
+          message: 'Este valor no es valido',
+          feedbackIcons: {
+            valid: 'fa-solid fa-check',
+            invalid: 'fa-solid fa-times',
+            validating: 'fas fa-spinner fa-pulse'
+          },
+          submitHandler: function (validator, form, submitButton) {
+            document.querySelector('#btnFetch').innerHTML = '<i class="fas fa-spinner fa-pulse" style="padding: 0; margin-right: 10px;"></i> Guardando...';
+            $.post(form.attr('action'), form.serialize(), function (result) {
+              if (result.status == false || result.status == 'false') {
+                var Toast = Swal.mixin({
+                  toast: true,
+                  orientation: 'auto',
+                  showConfirmButton: false,
+                  timer: 4000
+                });
+                document.querySelector('#btnFetch').innerHTML = '<i class="fa-solid fa-check"></i> Guardar';
+                Toast.fire({
+                  icon: 'error',
+                  title: result.msg
+                });
+              } else if (result.status == true || result.status == 'true') {
+                $('#addLink').modal('toggle');
+                $("form input[type=text]").each(function() { this.value = '' });
+                window.setTimeout(function() {
+                  window.location = '';
+                }, 2);
+                document.querySelector('#btnFetch').innerHTML = '<i class="fa-solid fa-check"></i> Guardar';						
+      
+              } else {
+                $('#addLinkForm').bootstrapValidator('disableSubmitButtons', false);
+              }
+            }, 'json')
+            .done(function(msg){  })
+            .fail(function(xhr, status, error) {
+              document.querySelector('#btnFetch').innerHTML = '<i class="fa-solid fa-check"></i> Guardar';
+              Swal.fire({
+                icon: 'error',
+                title: error,
+                showConfirmButton: false
+              })
+            });
+            
+          },
+          fields: {
+            name: {
+              validators: {
+                notEmpty: {
+                  message: 'Este campo no puede estar vacio'
+                }                
+              }
+            },
+            url: {
+              validators: {
+                notEmpty: {
+                  message: 'Este campo no puede estar vacio'
+                },
+                uri: {
+                  message: 'URL no válida'
+                },
+              }
+            }
+          }
+        })
+          .on('success.field.fv', function (e, data) {
+            if (data.fv.getInvalidFields().length > 0) {    // There is invalid field
+              data.fv.disableSubmitButtons(true);
+            }
+          });
+      });
+    </script>
+    <script>
+      $(document).ready(function() {
+          $('.select2').select2({
+              theme: "bootstrap-5",
+              dropdownParent: $('#addLink') 
+          });
+        });
+      </script>    
     {% block extrajs %}{% endblock %}
 </body>
 </html>
