--- a/public/static/css/style.css
+++ b/public/static/css/style.css
@@ -1,146 +1,381 @@
-  main > .container {
-    padding: 60px 15px 0;
-  }
+main > .container {
+  padding: 60px 15px 0;
+}
 
-  .rounded {
-    border-radius: 1rem !important;
-  }
+.rounded {
+  border-radius: 1rem !important;
+}
 
-  .bv-form .help-block{margin-bottom:0}.nav-tabs li.bv-tab-success>a{color:#3c763d}.nav-tabs li.bv-tab-error>a{color:#a94442}
+.bv-form .help-block {
+  margin-bottom: 0;
+}
+.nav-tabs li.bv-tab-success > a {
+  color: #3c763d;
+}
+.nav-tabs li.bv-tab-error > a {
+  color: #a94442;
+}
 
-  /* Validación */
-  .has-feedback {
-    position: relative;
+/* Validación */
+.has-feedback {
+  position: relative;
+}
+.has-feedback .form-control {
+  padding-right: 42.5px;
+}
+.form-control-feedback {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  display: block;
+  width: 34px;
+  height: 34px;
+  line-height: 34px;
+  text-align: center;
+  pointer-events: none;
+}
+.input-lg + .form-control-feedback,
+.input-group-lg + .form-control-feedback,
+.form-group-lg .form-control + .form-control-feedback {
+  width: 46px;
+  height: 46px;
+  line-height: 46px;
+}
+.input-sm + .form-control-feedback,
+.input-group-sm + .form-control-feedback,
+.form-group-sm .form-control + .form-control-feedback {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+}
+.has-success .help-block,
+.has-success .control-label,
+.has-success .radio,
+.has-success .checkbox,
+.has-success .radio-inline,
+.has-success .checkbox-inline,
+.has-success.radio label,
+.has-success.checkbox label,
+.has-success.radio-inline label,
+.has-success.checkbox-inline label {
+  color: #3c763d;
+}
+.has-success .form-control {
+  border-color: #198754;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+.has-success .form-control:focus {
+  border-color: #2b542c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #67b168;
+}
+.has-success .input-group-addon {
+  color: #198754;
+  background-color: #dff0d8;
+  border-color: #198754;
+}
+.has-success .form-control-feedback {
+  color: #198754;
+}
+.has-warning .help-block,
+.has-warning .control-label,
+.has-warning .radio,
+.has-warning .checkbox,
+.has-warning .radio-inline,
+.has-warning .checkbox-inline,
+.has-warning.radio label,
+.has-warning.checkbox label,
+.has-warning.radio-inline label,
+.has-warning.checkbox-inline label {
+  color: #8a6d3b;
+}
+.has-warning .form-control {
+  border-color: #8a6d3b;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+.has-warning .form-control:focus {
+  border-color: #66512c;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #c0a16b;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #c0a16b;
+}
+.has-warning .input-group-addon {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border-color: #8a6d3b;
+}
+.has-warning .form-control-feedback {
+  color: #8a6d3b;
+}
+.has-error .help-block,
+.has-error .control-label,
+.has-error .radio,
+.has-error .checkbox,
+.has-error .radio-inline,
+.has-error .checkbox-inline,
+.has-error.radio label,
+.has-error.checkbox label,
+.has-error.radio-inline label,
+.has-error.checkbox-inline label {
+  color: #dc3545;
+}
+.has-error .form-control {
+  border-color: #dc3545;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+.has-error .form-control:focus {
+  border-color: #843534;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ce8483;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #ce8483;
+}
+.has-error .input-group-addon {
+  color: #dc3545;
+  background-color: #f2dede;
+  border-color: #dc3545;
+}
+.has-error .form-control-feedback {
+  color: #dc3545;
+}
+.has-feedback label ~ .form-control-feedback {
+  top: 40px;
+}
+.has-feedback label.sr-only ~ .form-control-feedback {
+  top: 0;
+}
+.help-block {
+  display: block;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  color: #737373;
+}
+/*End Validacion*/
+/* ============================= 
+    PRELOADER CSS
+================================ */
+.preloader {
+  /* Body Overlay */
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: table;
+  height: 100%;
+  width: 100%;
+  /* Change Background Color */
+  background: rgba(0, 0, 0, 0.43);
+  z-index: 99999;
+}
+
+.preloader .loader {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.preloader .loader .spinner {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 64px;
+  margin-left: -32px;
+  z-index: 18;
+  pointer-events: none;
+}
+
+.preloader .loader .spinner .spinner-container {
+  pointer-events: none;
+  position: absolute;
+  width: 100%;
+  padding-bottom: 100%;
+  top: 50%;
+  left: 50%;
+  margin-top: -50%;
+  margin-left: -50%;
+  animation: spinner-linspin 1568.2353ms linear infinite;
+}
+
+.preloader .loader .spinner .spinner-container .spinner-rotator {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  animation: spinner-easespin 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both;
+}
+
+.preloader .loader .spinner .spinner-container .spinner-rotator .spinner-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  right: 50%;
+}
+
+.preloader .loader .spinner .spinner-container .spinner-rotator .spinner-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+  left: 50%;
+}
+
+.preloader .loader .spinner-circle {
+  box-sizing: border-box;
+  position: absolute;
+  width: 200%;
+  height: 100%;
+  border-style: solid;
+  /* Spinner Color */
+  border-color: #2f80ed #2f80ed #e9e9e9;
+  border-radius: 50%;
+  border-width: 6px;
+}
+
+.preloader .loader .spinner-left .spinner-circle {
+  left: 0;
+  right: -100%;
+  border-right-color: #e9e9e9;
+  animation: spinner-left-spin 1333ms cubic-bezier(0.4, 0, 0.2, 1) infinite both;
+}
+
+.preloader .loader .spinner-right .spinner-circle {
+  left: -100%;
+  right: 0;
+  border-left-color: #e9e9e9;
+  animation: right-spin 1333ms cubic-bezier(0.4, 0, 0.2, 1) infinite both;
+}
+
+/* Preloader Animations */
+
+@keyframes spinner-linspin {
+  to {
+    transform: rotate(360deg);
   }
-  .has-feedback .form-control {
-    padding-right: 42.5px;
+}
+
+@keyframes spinner-easespin {
+  12.5% {
+    transform: rotate(135deg);
   }
-  .form-control-feedback {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 2;
-    display: block;
-    width: 34px;
-    height: 34px;
-    line-height: 34px;
-    text-align: center;
-    pointer-events: none;
+  25% {
+    transform: rotate(270deg);
   }
-  .input-lg + .form-control-feedback,
-  .input-group-lg + .form-control-feedback,
-  .form-group-lg .form-control + .form-control-feedback {
-    width: 46px;
-    height: 46px;
-    line-height: 46px;
+  37.5% {
+    transform: rotate(405deg);
   }
-  .input-sm + .form-control-feedback,
-  .input-group-sm + .form-control-feedback,
-  .form-group-sm .form-control + .form-control-feedback {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
+  50% {
+    transform: rotate(540deg);
   }
-  .has-success .help-block,
-  .has-success .control-label,
-  .has-success .radio,
-  .has-success .checkbox,
-  .has-success .radio-inline,
-  .has-success .checkbox-inline,
-  .has-success.radio label,
-  .has-success.checkbox label,
-  .has-success.radio-inline label,
-  .has-success.checkbox-inline label {
-    color: #3c763d;
+  62.5% {
+    transform: rotate(675deg);
   }
-  .has-success .form-control {
-    border-color: #198754;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  75% {
+    transform: rotate(810deg);
   }
-  .has-success .form-control:focus {
-    border-color: #2b542c;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #67b168;
+  87.5% {
+    transform: rotate(945deg);
   }
-  .has-success .input-group-addon {
-    color: #198754;
-    background-color: #dff0d8;
-    border-color: #198754;
+  to {
+    transform: rotate(1080deg);
   }
-  .has-success .form-control-feedback {
-    color: #198754;
+}
+
+@keyframes spinner-left-spin {
+  0% {
+    transform: rotate(130deg);
   }
-  .has-warning .help-block,
-  .has-warning .control-label,
-  .has-warning .radio,
-  .has-warning .checkbox,
-  .has-warning .radio-inline,
-  .has-warning .checkbox-inline,
-  .has-warning.radio label,
-  .has-warning.checkbox label,
-  .has-warning.radio-inline label,
-  .has-warning.checkbox-inline label {
-    color: #8a6d3b;
+  50% {
+    transform: rotate(-5deg);
   }
-  .has-warning .form-control {
-    border-color: #8a6d3b;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  to {
+    transform: rotate(130deg);
   }
-  .has-warning .form-control:focus {
-    border-color: #66512c;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #c0a16b;
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #c0a16b;
+}
+
+@keyframes right-spin {
+  0% {
+    transform: rotate(-130deg);
   }
-  .has-warning .input-group-addon {
-    color: #8a6d3b;
-    background-color: #fcf8e3;
-    border-color: #8a6d3b;
+  50% {
+    transform: rotate(5deg);
   }
-  .has-warning .form-control-feedback {
-    color: #8a6d3b;
+  to {
+    transform: rotate(-130deg);
   }
-  .has-error .help-block,
-  .has-error .control-label,
-  .has-error .radio,
-  .has-error .checkbox,
-  .has-error .radio-inline,
-  .has-error .checkbox-inline,
-  .has-error.radio label,
-  .has-error.checkbox label,
-  .has-error.radio-inline label,
-  .has-error.checkbox-inline label {
-    color: #dc3545;
+}
+
+.spinnerapi {
+  margin: 100px auto 0;
+  width: 70px;
+  text-align: center;
+}
+
+.spinnerapi > div {
+  width: 18px;
+  height: 18px;
+  background-color: #333;
+
+  border-radius: 100%;
+  display: inline-block;
+  -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+}
+
+.spinnerapi .bounce1 {
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+
+.spinnerapi .bounce2 {
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+}
+
+@-webkit-keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
   }
-  .has-error .form-control {
-    border-color: #dc3545;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+  40% {
+    -webkit-transform: scale(1);
   }
-  .has-error .form-control:focus {
-    border-color: #843534;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
-            box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 6px #ce8483;
+}
+
+@keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
+    transform: scale(0);
   }
-  .has-error .input-group-addon {
-    color: #dc3545;
-    background-color: #f2dede;
-    border-color: #dc3545;
+  40% {
+    -webkit-transform: scale(1);
+    transform: scale(1);
   }
-  .has-error .form-control-feedback {
-    color: #dc3545;
+}
+
+.search:focus {
+  background-color: #E8E8E8;
+}
+
+@media (min-width: 528px) {
+	.dropdown-menu-search {
+    max-width: 500px;
   }
-  .has-feedback label ~ .form-control-feedback {
-    top: 40px;
+}
+
+@media (max-width: 527px) {
+	.dropdown-menu-search {
+    max-width: 300px;
   }
-  .has-feedback label.sr-only ~ .form-control-feedback {
-    top: 0;
-  }
-  .help-block {
-    display: block;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    color: #737373;
-  }
-  /*End Validacion*/
+}
+
+.dropdown-item > p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
+}
