--- a/templates/base.html
+++ b/templates/base.html
@@ -184,18 +184,18 @@
                     action="{% url 'public:add_link' %}"
                     method="POST"
                   >
-                    {% csrf_token %}
-                    <div class="form-group mb-4">
-                      <label class="mb-1" for="model"
-                        >{{ addlinkform.name.label }}</label
-                      >
-                      {{ addlinkform.name }}
-                    </div>
+                    {% csrf_token %}                    
                     <div class="form-group mb-4">
                       <label class="mb-1" for="model"
                         >{{ addlinkform.url.label }}</label
                       >
                       {{ addlinkform.url }}
+                    </div>
+                    <div class="form-group mb-4">
+                      <label class="mb-1" for="model"
+                        >{{ addlinkform.name.label }}</label
+                      >
+                      {{ addlinkform.name }}
                     </div>
                     <div class="form-group mb-4">
                       <label class="mb-1" for="model"
@@ -242,16 +242,18 @@
     </header>
 
     <!-- Begin page content -->
+    <div id="spinner"></div>
     <main class="flex-shrink-0">
       <div class="container">
         <div class="mx-auto" style="max-width: 500px">
-          <form action="" class="mt-3">
-            <div class="input-group mb-3">
+          <form id="search-form" autocomplete="off" class="mt-3">
+            {% csrf_token %}
+            <div class="input-group">
               <input
                 type="text"
-                class="form-control"
+                class="form-control search"
                 placeholder="Search text"
-                aria-describedby="button-addon2"
+                id="search-input"
               />
               <button
                 class="btn btn-outline-secondary"
@@ -262,6 +264,8 @@
               </button>
             </div>
           </form>
+          <ul id="result-box" class="dropdown-menu dropdown-menu-search"></ul>
+        
         </div>
 
         {% block container %}{% endblock %}
